--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -6,5 +6,8 @@ It's a less-popular game genre (compared to MMORPGs, RTS, FPS, etc.), mostly use
 ==Why make another engine?==
 Actually, this just started as a study in HTML5 that has gone a little too way out of hand. :) Admittedly, there's a lot of better engines out there.
 
+==Can I sell something I make with it?==
+I'm no expert in licenses but I think so. What I'm providing you is a free pen and paper to write your novel, but the novel is entirely yours to do whatever you want with it.
+
 ==Can I help?==
 Sure why not. I appreciate feature requests, bug reports, patches, etc. Also, I do not have access to other platforms, particularly IE9/Win7, Safari/MAC, iOs, Android, iPhone, etc. So any help on the above is very much welcome.
