Edited wiki page RevisionHistory through web user interface.
git-svn-id: http://vn-canvas.googlecode.com/svn@23 ab04d24e-07b1-062f-66d7-301b5432de48

--- a/wiki/RevisionHistory.wiki
+++ b/wiki/RevisionHistory.wiki
@@ -1,6 +1,13 @@
 =Revision History=
 {{{
 Version 0.3 Brenda
+05.04.12 - Added auto-revealing map to 'tile' navigation
+	 - Bugfix: local storage persist flag fix
+04.23.12 - Optimized 'skip' text storage
+	 - Bugfix: sprite reuse using tags
+	 - Support multiple avatars reuse thru tags
+	 - Added screen action 'fall'
+04.22.12 - Added actor 'stats' plugin
 04.17.12 - Added 'skip read text' function for quick replay
 	 -   not thoroughly tested, use with caution
 	 - Added toggle mode for 'button'
