Edited wiki page FAQ through web user interface.
git-svn-id: http://vn-canvas.googlecode.com/svn@26 ab04d24e-07b1-062f-66d7-301b5432de48

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -19,3 +19,10 @@ Sure why not. I appreciate feature requests, bug reports, patches, etc. Also, I 
 
 ==If I make something with it, do you require anything in return?==
 Nope. Nada. Even credit or link back is totally optional. I'd like to see what you did though. I'm not asking for a copy of your work, just maybe a link to your site or a couple of screenshots, just for my "bragging rights". :)
+
+==What are those different downloads and different versions (vncanvas-0.x.js)?==
+Those are just versions I keep for history and tracking. Sometimes, some code may get broken because of updates and it is usually useful to have some working code to revert back to.
+If you only need the latest, just get the highest numbered download or the highest versioned javascript. Note however that the build version at SVN may be newer than the packaged download versions.
+
+==Why are the versions named after girl's names?==
+That's just a fancy way of calling Alpha, Beta, etc. versions. Might as well stick with it. :)
