--- a/wiki/RevisionHistory.wiki
+++ b/wiki/RevisionHistory.wiki
@@ -1,6 +1,9 @@
 =Revision History=
 {{{
 Version 0.4 Chelsea
+05.18.13 - updated vntemplate
+	 - added config file checks to catch errors
+04.12.13 - various bugfixes
 03.10.13 - support for clickable "scene" objects
 	 - support for change of actor "nick"
 	 - Bugfix: actor reset changes position for non-auto actors
@@ -12,7 +15,7 @@ Version 0.4 Chelsea
 02.07.13 - "scene" support for animated objects
 12.29.12 - 'menu' supports user variable set
 12.24.12 - Support _range attribute for actor stats
-         - Support '$' prepend on jump labels
+	 - Support '$' prepend on jump labels
 12.01.12 - Prep for RPG MOD Pack
 Version 0.3 Brenda
 10.12.12 - Bugfix: touch devices reset fix (courtesy of Turker Yasa)
