--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,20 +1,23 @@
 #labels Featured
-= Features =
+#sidebar TableOfContents
+  * [Introduction Introducing vn-canvas]
+    * [Features vn-canvas features]
+    * [ThirdPartyGames Third Party Games Using vn-canvas]
+    * [FAQ Frequently Asked Questions]
+  * [RevisionHistory Revision History]
 
-*Takes advantage of new HTML5 features*, e.g. canvas and audio tags (with more on the way including video, local file access and forms),
- as compared to other engines such as _JS-ViNE: A JavaScript Visual Novel Engine_ by J. David Eisenberg which uses mostly standard HTML4 elements.
+#summary Welcome to vn-canvas
 
-*Targeted specifically for visual novels*
- The engine contains none of the overhead caused by extra features (which visual novels aren't going to use anyway) in generic game engines, such as _Construct2 - HTML5 game creator_ by Scirra Ltd. and _Enchant Javascript Game engine_ by Ubiquitous Entertainment Inc.
+=WELCOME TO vn-canvas=
 
-*Simple enough to use even by non HTML and/or javascript programmers.*
- A game maker or story teller need only concern himself with the story itself, like directing a movie or play.
+A visual novel engine for HTML5 Canvas, designed for non-programmers so developers can concentrate on gameplay and story telling.
 
-*Cross platform on any HTML5-capable browser* without the need for additional plugins or extensions. 
- That means, it runs on Windows, Mac, Android, or anywhere these modern browsers run on. (Have only tested though on Firefox, Chrome and Opera, so if you're willing to give it a shot on the other browsers, feel free and please give me feedback.)
+Though targeted for visual novels, with a little imagination, it's good enough to make
 
-*Resources (e.g. images, audio) are loaded on-the-fly* and not preloaded at the start. 
- So you don't have to wait 5 minutes watching a progress bar that gets stuck on 88%. There will be lags however in between frames as resources get loaded, but with faster internet connections or even offline play, these will hardly be noticeable.
+* non-flash ads
+* image slideshows
+* online powerpoint-like presentations
+* visual learning tool for kids
+* and much more!
 
-*Best of all, it's built using free tools at zero budget. :)*
- No need to pay anything just to start making your own visual novels! Plus the engine is licensed with GNU Lesser GPL making the engine open-source for free and commercial use!
+Best of all, it's built using free tools at zero budget! 
