--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,8 +1,6 @@
 #labels Featured
 #sidebar TableOfContents
 
-#summary Welcome to vn-canvas
-
 =WELCOME TO vn-canvas=
 
 A visual novel engine for HTML5 Canvas, designed for non-programmers so developers can concentrate on gameplay and story telling.
@@ -16,3 +14,5 @@ Though targeted for visual novels, with a little imagination, it's good enough t
 * and much more!
 
 Best of all, it's built using free tools at zero budget! 
+
+This {{{WIKI}}} contains documentation and references regarding vn-canvas and it's use.
