Edited wiki page Features through web user interface. ADDED TOC
git-svn-id: http://vn-canvas.googlecode.com/svn@56 ab04d24e-07b1-062f-66d7-301b5432de48

--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -1,3 +1,5 @@
+#labels Phase-Design
+#sidebar TableOfContents
 = Features =
 
 *Takes advantage of new HTML5 features*, e.g. canvas and audio tags (with more on the way including video, local file access and forms),
