Edited wiki page ThirdPartyGames through web user interface.
git-svn-id: http://vn-canvas.googlecode.com/svn@57 ab04d24e-07b1-062f-66d7-301b5432de48

--- a/wiki/ThirdPartyGames.wiki
+++ b/wiki/ThirdPartyGames.wiki
@@ -1,3 +1,5 @@
+#labels Phase-Support
+#sidebar TOC
 = Third Party Visual Novel =
 
 Here you'll find games using vn-canvas engine (or a modified version of it). There may be others, but currently, these are just games easily found by google.
