Edited wiki page FAQ through web user interface.
git-svn-id: http://vn-canvas.googlecode.com/svn@63 ab04d24e-07b1-062f-66d7-301b5432de48

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -2,6 +2,8 @@
 #sidebar TableOfContents
 = FREQUENTLY ASKED QUESTIONS REGARDING VN-CANVAS =
 
+<wiki:toc max_depth="1" />
+
 ==What's a Visual Novel?==
  It's a less-popular game genre (compared to MMORPGs, RTS, FPS, etc.), mostly used in dating sims. But it's more than that. Think _"digital Choose-Your-Own-Adventure meets graphic novels."_
 
