--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,5 +1,5 @@
-  * [Introduction Introducing vn-canvas]
+  * [Introduction _Introducing vn-canvas_]
     * [Features vn-canvas features]
     * [ThirdPartyGames Third Party Games Using vn-canvas]
     * [FAQ Frequently Asked Questions]
-  * [RevisionHistory Revision History]
+  * [RevisionHistory _Revision History_]
