Edited wiki page TableOfContents through web user interface.
git-svn-id: http://vn-canvas.googlecode.com/svn@70 ab04d24e-07b1-062f-66d7-301b5432de48

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,5 +1,5 @@
-  * [Introduction _Introducing vn-canvas_]
+  * _[Introduction Introducing vn-canvas]_
     * [Features vn-canvas features]
     * [ThirdPartyGames Third Party Games Using vn-canvas]
     * [FAQ Frequently Asked Questions]
-  * [RevisionHistory _Revision History_]
+  * _[RevisionHistory Revision History]_
