--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -13,6 +13,8 @@ Though targeted for visual novels, with a little imagination, it's good enough t
   * visual learning tool for kids
   * and much more!
 
+_for more features, see [Features Feature list]!_
+
 Best of all, it's built using free tools at zero budget! 
 
 This {{{WIKI}}} contains documentation and references regarding vn-canvas and it's use.
