Edited wiki page TableOfContents through web user interface.
git-svn-id: http://vn-canvas.googlecode.com/svn@75 ab04d24e-07b1-062f-66d7-301b5432de48

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -2,4 +2,6 @@
     * [Features vn-canvas features]
     * [ThirdPartyGames Third Party Games Using vn-canvas]
     * [FAQ Frequently Asked Questions]
+  * _[DocumentationIntro vn-canvas Documentation]_
+    * [GettingStarted Getting Started with vn-canvas!]
   * _[RevisionHistory Revision History]_
