Edited wiki page TableOfContents through web user interface.
git-svn-id: http://vn-canvas.googlecode.com/svn@77 ab04d24e-07b1-062f-66d7-301b5432de48

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -4,4 +4,8 @@
     * [FAQ Frequently Asked Questions]
   * _[DocumentationIntro vn-canvas Documentation]_
     * [GettingStarted Getting Started with vn-canvas!]
+    * vn-canvas Heirarchy
+      * [HeMainFile The Main HTML file]
+      * [HeTOC Table-of-contents file]
+      * [HeChapter Chapter files]
   * _[RevisionHistory Revision History]_
