Edited wiki page HeMainFile through web user interface.
git-svn-id: http://vn-canvas.googlecode.com/svn@79 ab04d24e-07b1-062f-66d7-301b5432de48

--- a/wiki/HeMainFile.wiki
+++ b/wiki/HeMainFile.wiki
@@ -1,5 +1,5 @@
 #sidebar TableOfContents
-The Main HTML file
+=The Main HTML file=
 
 Although the template already has an HTML file, you can make your own HTML file that can be customized to your liking.
 
