Edited wiki page TableOfContents through web user interface.
git-svn-id: http://vn-canvas.googlecode.com/svn@84 ab04d24e-07b1-062f-66d7-301b5432de48

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -8,4 +8,10 @@
       * [HeMainFile The Main HTML file]
       * [HeTOC Table-of-contents file]
       * [HeChapter Chapter files]
+      * [HeConfig Configuration file]
+  * _[ReferenceIntro vn-canvas Reference]_
+  * _[RPGIntro vn-canvas RPG add-on]_
+  * _Other vn-canvas Features_
+      * _[Plugins Plug-ins Explained]_
+      * _[Macros Macros Explains]_
   * _[RevisionHistory Revision History]_
