--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -14,4 +14,5 @@
   * _Other vn-canvas Features_
       * _[Plugins Plug-ins Explained]_
       * _[Macros Macros Explains]_
+      * _[Preload Preloading]_
   * _[RevisionHistory Revision History]_
