--- a/wiki/HeConfig.wiki
+++ b/wiki/HeConfig.wiki
@@ -7,44 +7,135 @@
  More options to follow in future versions.
 
 || *Themes Parameter* 	|| *Description* ||
-|| formStyle ||	The default styling for the canvas forms. ||
-|| formTipStyle || The default styling for tool tips. ||
-|| formTipColor || The default background color for tool tips. ||
-|| formElementBack     || The default background color for non-image elements. ||
-|| boxFontStyle || The default font styling for the dialog box. ||
-|| boxDimStyle || The default solid or gradient fill for the dim-style dialog box. ||
-||boxImageStyle || The default image file for the image-back dialog box. ||
-||boxTagStyle || The default font styling for the actor name tag shown on the dialog box. ||
-||boxMenuHilite || The default highlight color for the menu (options) on the dialog box. ||
-||balloonFillStyle || The default fill style for the speech balloon. ||
-||balloonStrokeStyle || The default outline style for the speech balloon. ||
-||automapMask ||The default fill color for hidden automap positions. ||
-||automapPointer || The default fill and stroke color for the automap pointer.||
+|| {{{formStyle}}} ||	The default styling for the canvas forms. ||
+|| {{{formTipStyle}}} || The default styling for tool tips. ||
+|| {{{formTipColor}}} || The default background color for tool tips. ||
+|| {{{formElementBack}}}     || The default background color for non-image elements. ||
+|| {{{boxFontStyle}}} || The default font styling for the dialog box. ||
+|| {{{boxDimStyle}}} || The default solid or gradient fill for the dim-style dialog box. ||
+|| {{{boxImageStyle}}} || The default image file for the image-back dialog box. ||
+|| {{{boxTagStyle}}} || The default font styling for the actor name tag shown on the dialog box. ||
+|| {{{boxMenuHilite}}} || The default highlight color for the menu (options) on the dialog box. ||
+|| {{{balloonFillStyle}}} || The default fill style for the speech balloon. ||
+|| {{{balloonStrokeStyle}}} || The default outline style for the speech balloon. ||
+|| {{{automapMask}}} ||The default fill color for hidden automap positions. ||
+|| {{{automapPointer}}} || The default fill and stroke color for the automap pointer.||
 
 
 || *Config Parameter* ||	*Description* ||
-||themeList 	|| The listing for all supported themes. This configuration variable can <br>be used by dropdown elements in a form to display available themes. <br>Declare as name-theme pair. ||
-|| activeTheme 	|| The currently active theme. ||
-|| volumeAudio 	|| The maximum volume for all audio sounds. ||
-|| volumeVideo 	|| The maximum volume for all videos. ||
-|| boxWidth 	|| The width of the default dialog box relative to viewport width. ||
-|| boxHeight 	|| The height of the default dialog box relative to viewport height. ||
-|| boxFullHeight || The height of the full dialog box relative to viewport height. ||
-|| boxScrollSpeed || The speed of the scrolling text relative to a preset speed. The higher the<br> value, the faster the scrolling. ||
-|| balloonWidth 	|| The width of the speech balloon relative to viewport width. ||
-|| balloonHeight || The height of the speech balloon relative to viewport height. ||
-|| actorShowAvatar ||	Show the actor avatar on the dialog box. ||
-|| actorPerspective ||	Emulate depth perspective on mouse move. ||
-|| actorYPosition ||	The vertical position of the actor sprite relative to viewport height. A value<br> of 1 pins the actor at viewport bottom. <br>If actorPerspective is on, a value > 1 is recommended. ||
-|| audioFormat 	|| The audio formats supported. ||
-|| movieSize 	|| The video size relative to the viewport.||
-|| movieOnCanvas 	|| Plays video on canvas. ||
-|| movieFormat 	|| The video formats supported. ||
-|| transTime 	|| The approximate number of seconds for transitions. ||
-|| gameAllowMacro 	|| Allows custom game-specific javascript to execute. ||
-|| gameAllowPreload 	|| Allows game-specific resource preloading. ||
-|| gameAllowLookAhead 	|| As an alternative to specified or automatic preloading, this allows "look <br>ahead" to look for the next or most immediately needed resources for<br> preloading while the game is idle. ||
-|| gameNamedCheckpts 	|| Allows use of named checkpoints ||
-|| gameMatureFilter 	|| Filtering for mature content. ||
-|| gameBadWords 	|| In addition to manual filtering using "jump", this list the words that are<br> automatically filtered if gameMatureFilter is on. The word is replaced by<br> gameAltWord. ||
-|| gameAltWord 	|| The text to replace automatically filtered words. ||
+|| {{{themeList}}} 	|| The listing for all supported themes. This configuration variable can <br>be used by dropdown elements in a form to display available <br>themes. Declare as name-theme pair.<br> (eg. {{{["Simplify", Theme1,]}}}) ||
+|| {{{activeTheme}}} 	|| The currently active theme. ||
+|| {{{volumeAudio}}} 	|| The maximum volume for all audio sounds. ||
+|| {{{volumeVideo}}} 	|| The maximum volume for all videos. ||
+|| {{{boxWidth}}} 	|| The width of the default dialog box relative to viewport width. ||
+|| {{{boxHeight}}} 	|| The height of the default dialog box relative to viewport height. ||
+|| {{{boxFullHeight}}} || The height of the full dialog box relative to viewport height. ||
+|| {{{boxScrollSpeed}}} || The speed of the scrolling text relative to a preset speed. The higher<br> the value, the faster the scrolling. ||
+|| {{{balloonWidth}}} 	|| The width of the speech balloon relative to viewport width. ||
+|| {{{balloonHeight}}} || The height of the speech balloon relative to viewport height. ||
+|| {{{actorShowAvatar}}} ||	Show the actor avatar on the dialog box. ||
+|| {{{actorPerspective}}} ||	Emulate depth perspective on mouse move. If you intend to make the<br> visual novel for mobile devices (eg. iPad or Android-based tablets), <br>you may want to disable this.||
+|| {{{actorYPosition}}} ||	The vertical position of the actor sprite relative to viewport height. A<br> value of 1 pins the actor at viewport bottom. <br>If {{{actorPerspective}}} is on, a value > 1 is recommended. ||
+|| {{{audioFormat}}} 	|| The audio formats supported. ||
+|| {{{movieSize}}} 	|| The video size relative to the viewport.||
+|| {{{movieOnCanvas}}} 	|| Plays video on canvas. So far, some mobile devices do not support<br> direct video file playing on canvas.||
+|| {{{movieFormat}}} 	|| The video formats supported. ||
+|| {{{transTime}}} 	|| The approximate number of seconds for transitions. ||
+|| {{{gameAllowMacro}}} 	|| Allows custom game-specific javascript to execute. ||
+|| {{{gameAllowPreload}}} 	|| Allows game-specific resource preloading. ||
+|| {{{gameAllowLookAhead}}} 	|| As an alternative to specified or automatic preloading, this allows <br>"look ahead" to look for the next or most immediately needed <br>resources for preloading while the game is idle. ||
+|| {{{gameNamedCheckpts}}} 	|| Allows use of named checkpoints ||
+|| {{{gameMatureFilter}}} 	|| Filtering for mature content. ||
+|| {{{gameBadWords}}} 	|| In addition to manual filtering using "jump", this list the words that<br> are automatically filtered if gameMatureFilter is on. The word is <br>replaced by {{{gameAltWord}}}. ||
+|| {{{gameAltWord}}} 	|| The text to replace automatically filtered words. ||
+
+==Configuration File Sample==
+
+  Here is a sample configuration file ({{{demo_config.js}}}) used from the demo VN. Here, theme elements are created ({{{Theme1}}} and {{{Theme2}}}). The rest are all configuration proper.
+
+{{{
+// Globals for configuration
+Theme1 = {
+	formFontStyle:		"bold 16px 'Courier New' #404040",
+	formElementBack:	"#FFFFE0",
+	formTipColor:		"#FFFFE0",
+	formTipStyle:		"normal 12px sans-serif black",
+	
+	boxFontStyle:		"bold 16px 'Courier New' white",
+	boxDimStyle:		"#000000 #808080",
+	boxImageStyle:		null,
+	boxTagStyle:		"bold 18px Verdana #c8ffc8",
+	boxMenuHilite:		"#c08040",
+	
+	balloonFillStyle:	"#000000 #808080",
+	balloonStrokeStyle: "#FFFFFF",
+	
+	automapMask:		"C0C0C0",
+	automapPointer:		"#FF0000 #000000"
+}
+
+Theme2 = {
+	formFontStyle:		"normal 16px Arial #404040",
+	formElementBack:	"#FFFFE0",
+	formTipColor:		"#FFFFE0",
+	formTipStyle:		"normal 12px sans-serif red",
+	
+	boxFontStyle:		"bold 16px Verdana white",
+	boxDimStyle:		"#800000 #808080",
+	boxImageStyle:		"demo/box-image.png",
+	boxTagStyle:		"bold 18px Verdana #ff8000",
+	boxMenuHilite:		"#c08040",
+
+	balloonFillStyle:	"#800000 #808080",
+	balloonStrokeStyle: "#FF0000",
+
+	automapMask:		"C0C0C0",
+	automapPointer:		"#FF0000 #000000"
+}
+
+Config = {
+	// Themes
+	themeList:		["Simplify", Theme1, 
+				"Radical", Theme2],
+	activeTheme:		Theme1,
+
+	// Volume
+	volumeAudio:		0.9,
+	volumeVideo:		0.9,
+	
+	// Script Box
+	boxWidth:			0.75,
+	boxHeight:			0.25,
+	boxFullHeight:		0.875,
+	boxScrollSpeed:		1.0,
+	balloonWidth:		0.5,
+	balloonHeight:		0.2,
+
+	// Actors
+	actorShowAvatar:	true,
+	actorPerspective:	true,
+	actorYPosition:		1.125,
+
+	// Audio
+	audioFormat:		["mp3", "ogg"],
+
+	// Movie
+	movieSize:			0.75,
+	movieOnCanvas:		true,
+	movieFormat:		["mp4", "ogv"],
+	
+	// Transitions
+	transTime:			1.0,
+	
+	// Gameplay
+	gameMatureFilter:	true,
+	gameBadWords:		["fuck", "wank", "shit", "pussy", "cunt", "dick"],
+	gameAltWord:		"****",
+	gameAllowMacro:		true,
+	gameAllowPreload:	true,
+	gameNamedCheckpts:	false,
+	gameAllowLookAhead: true,
+}
+
+
+}}}
